[gd_scene load_steps=27 format=4 uid="uid://8wjwyq6s51wt"]

[ext_resource type="Script" path="res://Levels/court_room.gd" id="1_phnsk"]
[ext_resource type="Texture2D" uid="uid://da76r8xjccfxl" path="res://Sprites/Tilemap/tilemap.png" id="1_sqy2h"]
[ext_resource type="Texture2D" uid="uid://q7amaq8yigda" path="res://Sprites/table.png" id="2_36nhj"]
[ext_resource type="AudioStream" uid="uid://cr3alhlncs7t5" path="res://Sound/Music/Three Red Hearts - Modern Bits.ogg" id="2_bmflx"]
[ext_resource type="AudioStream" uid="uid://bf1w1ardgknxp" path="res://Sound/Music/Three Red Hearts - Box Jump.ogg" id="3_7qnb6"]
[ext_resource type="Texture2D" uid="uid://cf83ctu0sb6sk" path="res://Sprites/stand.png" id="3_70rx4"]
[ext_resource type="PackedScene" uid="uid://dd0cjjohqfsxy" path="res://Actors/Enemies/Bosses/boss_1.tscn" id="4_dxsrj"]
[ext_resource type="AudioStream" uid="uid://crefoegn2jos0" path="res://Sound/whistle.ogg" id="4_wdw4j"]
[ext_resource type="PackedScene" uid="uid://cltl538t2rv4j" path="res://Actors/Player/player.tscn" id="5_q6ogp"]
[ext_resource type="FontFile" uid="uid://bfqvw5m45spwp" path="res://Sprites/UI/Retro Gaming.ttf" id="6_s3arh"]
[ext_resource type="Script" path="res://Actors/mallet_spawner.gd" id="7_4uldi"]
[ext_resource type="PackedScene" uid="uid://ctic3c4lq4as5" path="res://Scenes/dialogue.tscn" id="7_dr8s0"]
[ext_resource type="PackedScene" uid="uid://cjqulh0glkpxm" path="res://Actors/Enemies/basic_enemy.tscn" id="8_pkktx"]
[ext_resource type="AudioStream" uid="uid://cljsabvgipp5c" path="res://Sound/Minifantasy_Dungeon_SFX/26_sword_hit_1.wav" id="9_e5xhy"]
[ext_resource type="AudioStream" uid="uid://ls83ipy7oytw" path="res://Sound/Minifantasy_Dungeon_SFX/18_orc_charge.wav" id="11_ei1e5"]
[ext_resource type="Texture2D" uid="uid://c2j1buoodg543" path="res://Sprites/boss_health.png" id="14_qjqoo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fv6ev"]
texture = ExtResource("1_sqy2h")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -8.125, -16, -8.125)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_1oi2s"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fv6ev")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm8xs"]
size = Vector2(191, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3p3dh"]
size = Vector2(64, 5.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_fqxn8"]

[sub_resource type="Curve2D" id="Curve2D_vwodi"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 25, 117, 0, 0, 0, 0, 19, 238, 0, 0, 0, 0, 151, 301, 0, 0, 0, 0, 480, 302, 0, 0, 0, 0, 481, 239, 0, 0, 0, 0, 559, 239, 0, 0, 0, 0, 555, 117, 0, 0, 0, 0, 472, 114, 0, 0, 0, 0, 451, 29, 0, 0, 0, 0, 397, 27, 0, 0, 0, 0, 390, 134, 0, 0, 0, 0, 180, 132, 0, 0, 0, 0, 155, 30, 0, 0, 0, 0, 113, 33, 0, 0, 0, 0, 105, 112, 0, 0, 0, 0, 24, 116)
}
point_count = 16

[sub_resource type="Animation" id="Animation_l0x2u"]
resource_name = "OpeningAnimation"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["", "P", "Ple", "Plea", "Pleas", "Please", "Please ", "Please t", "Please ta", "Please tak", "Please take", "Please take ", "Please take a", "Please take a s", "Please take a se", "Please take a sea", "Please take a seat", "Please take a seat.", "Please take a seat..", "Please take a seat...", ""]
}

[sub_resource type="Animation" id="Animation_ht6lo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="Animation" id="Animation_6mdrg"]
resource_name = "Start"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["C", "Co", "Cou", "Cour", "Court ", "Court  ", "Court i", "Court is", "Court is ", "Court is i", "Court is in", "Court is in ", "Court is in 
s", "Court is in 
se", "Court is in 
ses", "Court is in 
sess", "Court is in 
sessi", "Court is in 
sessio", "Court is in 
session", ""]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iv0n1"]
_data = {
"OpeningAnimation": SubResource("Animation_l0x2u"),
"RESET": SubResource("Animation_ht6lo"),
"Start": SubResource("Animation_6mdrg")
}

[node name="CourtRoom" type="Node2D" node_paths=PackedStringArray("player", "boss", "player_pos", "start_dialogue_node", "mid_dialogue_node", "last_dialogue_node", "map")]
script = ExtResource("1_phnsk")
player = NodePath("Map/Player")
boss = NodePath("Map/Boss1")
player_pos = NodePath("Map/TableR/Area2D")
start_dialogue_node = NodePath("OpeningDialogue")
mid_dialogue_node = NodePath("MidDialogue")
last_dialogue_node = NodePath("LastDialogue")
map = NodePath("Map")
court_music = ExtResource("2_bmflx")
battle_music = ExtResource("3_7qnb6")
timeout_sound = ExtResource("4_wdw4j")

[node name="Map" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAMAAAAAAAEAAAACAAMAAAABAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAACAAMAAAADAAEAAAACAAMAAAACAAEAAAAAAAAAAAAAAAIAAAACAAMAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAACAAMAAAAEAAIAAAACAAMAAAAEAAEAAAACAAMAAAAEAAAAAAACAAMAAAAEAAMAAAACAAMAAAAFAAIAAAACAAMAAAAFAAEAAAACAAMAAAAFAAAAAAACAAMAAAANAAAAAAACAAMAAAANAAEAAAACAAMAAAANAAIAAAACAAMAAAARAAIAAAACAAMAAAARAAEAAAACAAMAAAARAAAAAAACAAMAAAAQAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAOAAAAAAACAAMAAAAOAAEAAAACAAMAAAAOAAIAAAACAAMAAAAPAAIAAAAAAAAAAAAPAAEAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAMAAIAAAACAAMAAAAMAAEAAAACAAMAAAAMAAAAAAACAAMAAAAAAAcAAAACAAMAAAAAAAYAAAACAAMAAAAAAAUAAAACAAMAAAAAAAQAAAACAAMAAAAAAAMAAAACAAMAAAABAAMAAAACAAMAAAABAAQAAAACAAMAAAABAAUAAAADAAMAAAABAAYAAAADAAMAAAABAAcAAAACAAMAAAABAAgAAAACAAMAAAAAAAgAAAACAAMAAAAAAAkAAAACAAMAAAABAAkAAAACAAMAAAACAAkAAAACAAMAAAACAAgAAAACAAMAAAACAAcAAAACAAMAAAACAAYAAAADAAMAAAACAAUAAAADAAMAAAACAAQAAAACAAMAAAACAAMAAAACAAMAAAADAAMAAAACAAMAAAADAAQAAAADAAMAAAADAAUAAAADAAMAAAADAAYAAAACAAMAAAADAAcAAAACAAMAAAADAAgAAAACAAMAAAADAAkAAAACAAMAAAAEAAkAAAACAAMAAAAEAAgAAAADAAMAAAAEAAcAAAACAAMAAAAEAAYAAAADAAMAAAAEAAUAAAADAAMAAAAEAAQAAAADAAMAAAAFAAQAAAADAAMAAAAFAAMAAAACAAMAAAAGAAMAAAACAAMAAAAGAAIAAAACAAMAAAAGAAEAAAACAAMAAAAGAAAAAAACAAMAAAAHAAAAAAACAAMAAAAHAAEAAAACAAMAAAAHAAIAAAACAAMAAAAHAAMAAAACAAMAAAAGAAQAAAACAAMAAAAGAAUAAAACAAMAAAAFAAUAAAACAAMAAAAFAAYAAAACAAMAAAAFAAcAAAACAAMAAAAFAAgAAAADAAMAAAAFAAkAAAACAAMAAAAGAAkAAAACAAMAAAAGAAgAAAADAAMAAAAGAAcAAAACAAMAAAAGAAYAAAACAAMAAAAHAAYAAAABAAEAAAAHAAUAAAACAAIAAAAIAAUAAAADAAAAAAAIAAQAAAACAAMAAAAIAAMAAAACAAMAAAAIAAIAAAACAAMAAAAIAAEAAAACAAMAAAAIAAAAAAACAAMAAAAJAAAAAAACAAMAAAAJAAEAAAACAAMAAAAJAAIAAAACAAMAAAAJAAMAAAACAAMAAAAJAAQAAAACAAMAAAAJAAUAAAADAAAAAAAJAAYAAAACAAMAAAAIAAYAAAACAAMAAAAHAAcAAAADAAIAAAAHAAgAAAACAAMAAAAHAAkAAAADAAMAAAAIAAkAAAABAAEAAAAIAAgAAAABAAEAAAAJAAgAAAAAAAEAAAAKAAcAAAABAAMAAAAKAAYAAAAAAAEAAAAKAAUAAAAAAAMAAAAKAAMAAAACAAMAAAAKAAIAAAACAAMAAAAKAAEAAAACAAMAAAAKAAAAAAACAAMAAAALAAAAAAACAAMAAAALAAEAAAACAAMAAAALAAIAAAACAAMAAAALAAMAAAACAAMAAAALAAUAAAACAAMAAAALAAYAAAACAAMAAAALAAcAAAACAAMAAAALAAgAAAACAAMAAAAKAAgAAAACAAMAAAAKAAkAAAACAAMAAAAJAAkAAAAAAAEAAAALAAkAAAACAAMAAAAMAAkAAAACAAMAAAAMAAgAAAACAAMAAAAMAAcAAAACAAMAAAAMAAYAAAACAAMAAAAMAAUAAAACAAMAAAAMAAQAAAACAAMAAAAMAAMAAAACAAMAAAANAAMAAAADAAMAAAANAAQAAAACAAMAAAANAAUAAAACAAMAAAANAAYAAAACAAMAAAANAAcAAAACAAMAAAANAAgAAAADAAMAAAANAAkAAAADAAMAAAAOAAkAAAACAAMAAAAOAAgAAAADAAMAAAAOAAcAAAACAAMAAAAOAAYAAAACAAMAAAAOAAUAAAACAAMAAAAOAAQAAAADAAMAAAAOAAMAAAADAAMAAAAPAAMAAAACAAMAAAAPAAQAAAADAAMAAAAPAAUAAAACAAMAAAAPAAYAAAACAAMAAAAPAAcAAAACAAMAAAAPAAgAAAADAAMAAAAPAAkAAAACAAMAAAAQAAkAAAACAAMAAAAQAAgAAAACAAMAAAAQAAcAAAACAAMAAAAQAAYAAAACAAMAAAAQAAUAAAACAAMAAAAQAAQAAAADAAMAAAAQAAMAAAACAAMAAAARAAMAAAACAAMAAAARAAQAAAACAAMAAAARAAUAAAACAAMAAAARAAYAAAACAAMAAAARAAcAAAACAAMAAAARAAgAAAACAAMAAAARAAkAAAACAAMAAAAIAAcAAAADAAEAAAAJAAcAAAABAAIAAAAKAAQAAAACAAMAAAALAAQAAAACAAMAAAAHAAQAAAACAAMAAAA=")
tile_set = SubResource("TileSet_1oi2s")

[node name="Stand" type="StaticBody2D" parent="Map"]
position = Vector2(286, 76)

[node name="Stand" type="Sprite2D" parent="Map/Stand"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_70rx4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Stand"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_pm8xs")

[node name="TableR" type="StaticBody2D" parent="Map"]
position = Vector2(421, 182)

[node name="Table" type="Sprite2D" parent="Map/TableR"]
texture = ExtResource("2_36nhj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/TableR"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_3p3dh")

[node name="Area2D" type="Area2D" parent="Map/TableR"]
position = Vector2(1, 12)
scale = Vector2(1.00051, 1)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/TableR/Area2D"]
scale = Vector2(-3.47781, 1.42847)
shape = SubResource("CircleShape2D_fqxn8")

[node name="TableL" type="StaticBody2D" parent="Map"]
position = Vector2(147, 178)

[node name="Table" type="Sprite2D" parent="Map/TableL"]
texture = ExtResource("2_36nhj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/TableL"]
position = Vector2(0, -13.625)
shape = SubResource("RectangleShape2D_3p3dh")

[node name="Boss1" parent="Map" node_paths=PackedStringArray("player", "health_bar") instance=ExtResource("4_dxsrj")]
position = Vector2(149, 176)
player = NodePath("../Player")
health_bar = NodePath("../../BossHealth")
max_health = 3
hit_sound = ExtResource("9_e5xhy")

[node name="Player" parent="Map" instance=ExtResource("5_q6ogp")]
position = Vector2(287, 280)
game_over = ExtResource("11_ei1e5")

[node name="Path2D" type="Path2D" parent="Map"]
curve = SubResource("Curve2D_vwodi")

[node name="MalletSpawner" type="PathFollow2D" parent="Map/Path2D" node_paths=PackedStringArray("target")]
position = Vector2(25, 117)
rotation = 1.62034
script = ExtResource("7_4uldi")
mallet_scene = ExtResource("8_pkktx")
target = NodePath("../../Player")

[node name="SpawnRate" type="Timer" parent="Map/Path2D/MalletSpawner"]
wait_time = 2.0

[node name="BossPos" type="Node2D" parent="Map"]
position = Vector2(148, 178)

[node name="OpeningDialogue" parent="." node_paths=PackedStringArray("controller") instance=ExtResource("7_dr8s0")]
visible = false
text_arr = PackedStringArray("Your honor, I present the guilty as accused. ", "They stand on trial for the charge of:", "Being too silly.", "Let the trial commence.")
controller = NodePath("..")

[node name="MidDialogue" parent="." node_paths=PackedStringArray("controller") instance=ExtResource("7_dr8s0")]
visible = false
text_arr = PackedStringArray("Impressive, didn\'t think you had it in you to survive that. ", "Now prepare to be...", "Litigated.")
controller = NodePath("..")

[node name="LastDialogue" parent="." node_paths=PackedStringArray("controller") instance=ExtResource("7_dr8s0")]
visible = false
text_arr = PackedStringArray("Okay, order in the court.", "I see I underestimated you.", "It won\'t happen again.")
controller = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iv0n1")
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
z_index = 1
offset_left = 317.0
offset_top = 23.0
offset_right = 434.0
offset_bottom = 52.0
scale = Vector2(0.992705, 1)
theme_override_fonts/normal_font = ExtResource("6_s3arh")
theme_override_font_sizes/bold_italics_font_size = 0
theme_override_font_sizes/italics_font_size = 0
theme_override_font_sizes/mono_font_size = 0
theme_override_font_sizes/normal_font_size = 10
theme_override_font_sizes/bold_font_size = 0
scroll_active = false

[node name="TimerLabel" type="RichTextLabel" parent="."]
visible = false
z_index = 1
offset_left = 260.0
offset_top = 2.0
offset_right = 361.0
offset_bottom = 30.0
theme_override_fonts/normal_font = ExtResource("6_s3arh")
bbcode_enabled = true

[node name="SurvivalTimer" type="Timer" parent="TimerLabel"]
wait_time = 20.0
one_shot = true

[node name="BossHealth" type="TextureProgressBar" parent="."]
visible = false
z_index = 1
offset_left = 191.0
offset_top = 278.0
offset_right = 383.0
offset_bottom = 318.0
max_value = 3.0
value = 3.0
texture_progress = ExtResource("14_qjqoo")
tint_progress = Color(0.815944, 0.213857, 0.270216, 1)

[connection signal="body_entered" from="Map/TableR/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="phase_end" from="Map/Boss1" to="." method="_on_boss_1_phase_end"]
[connection signal="timeout" from="Map/Path2D/MalletSpawner/SpawnRate" to="Map/Path2D/MalletSpawner" method="_on_spawn_rate_timeout"]
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="TimerLabel/SurvivalTimer" to="." method="_on_survival_timer_timeout"]
